[package]
name = "runir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crc-interner", "util-clap"]
crc-interner = ["crc"]
util-clap = ["clap"]

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
bytemuck = "1.14.0"
crc = { version = "3.0.1", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }

tokio = { version = "1.35.0", features = ["full"] }
futures = "0.3.29"
tracing = "0.1.40"
tracing-test = "0.2.4"
async-trait = "0.1.75"
clap = { version = "4.4.12", features = [ "string" ], optional = true }
bytes = "1.5.0"
bincode = "1.3.3"
